--- a/css/style.css
+++ b/css/style.css
@@ -177,3 +177,52 @@ a:hover{
   
   height: 75vh;
 }
+
+.book-wrapper{
+  background-color: #ff4245;
+  border-left: #2b2b2a solid 1rem;
+  width: 12vw;
+  height: 30vh;
+  margin-top: 8vh;
+  margin-left: 3.5vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 1rem;
+  box-shadow: 5px 5px 5px #2b2b2a;
+}
+
+.book{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  background-color: #ff4245;
+  width: 80%;
+  height: 80%;
+  border-radius: 1rem;
+}
+
+.book-title{
+
+}
+
+.book-author{
+  
+}
+
+.book-pages{
+
+}
+
+.book-interactions{
+}
+
+.delete-book-button{
+  
+}
+
+.favorite-book-button{
+  margin-left: 1rem;
+}
