--- a/css/style.css
+++ b/css/style.css
@@ -181,10 +181,10 @@ a:hover{
 .book-wrapper{
   background-color: #ff4245;
   border-left: #2b2b2a solid 1rem;
-  width: 12vw;
-  height: 30vh;
-  margin-top: 8vh;
-  margin-left: 3.5vw;
+  border-top: #ffffff solid 1rem;
+  width: 10vw;
+  height: 25vh;
+  margin: 3vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -199,30 +199,51 @@ a:hover{
   align-items: center;
   justify-content: space-evenly;
   background-color: #ff4245;
-  width: 80%;
-  height: 80%;
+  width: 100%;
+  height: 100%;
   border-radius: 1rem;
+  font-family: 'iron';
+}
+
+.book-title, .book-author{
+  font-size: 2rem;
 }
 
 .book-title{
-
+  height: 10vh;
+  margin-top: 2rem;
 }
 
 .book-author{
   
+  height: 10vh; 
 }
 
 .book-pages{
+  height: 5vh;
 
 }
 
 .book-interactions{
+  height: 5vh;
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  width: 100%;
+  margin-right: 1rem;
 }
 
-.delete-book-button{
-  
+.delete-wrapper, .favorite-wrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 2rem;
+  height: 2rem;
 }
 
-.favorite-book-button{
-  margin-left: 1rem;
+.delete-wrapper:hover, .favorite-wrapper:hover{
+  background-color: #ffffff;
+  border-radius: 100%;
+  cursor: pointer;
+  transition: background-color 1s;
 }
