--- a/Css/style.css
+++ b/Css/style.css
@@ -16,6 +16,7 @@ body {
   height: 8vh;
   display: flex;
   align-items: center;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
 }
 
 .website-name {
@@ -42,6 +43,101 @@ body {
   background-color: rgb(50, 88, 131);
   margin: 1rem;
   text-align: center;
+  cursor: pointer;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+}
+
+.popup {
+  width: 25vw;
+  height: 70vh;
+  background-color: rgb(228, 228, 230);
+  border-radius: 1rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: black;
+  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.2);
+  display: none;
+}
+
+.popup-toggled {
+  display: flex;
+}
+
+.input-top {
+  display: flex;
+  justify-content: center;
+  width: 25vw;
+  height: 10vh;
+}
+
+.popup-title {
+  font-size: 4rem;
+  width: 21vw;
+  margin-left: 2vw;
+  text-align: center;
+}
+
+.input-close {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  width: 2vw;
+}
+
+.input-close-button {
+  all: initial;
+  color: black;
+  width: 1vw;
+  height: 2vw;
+  text-align: center;
+  cursor: pointer;
+}
+
+.input.wrapper {
+  height: 50vh;
+  font-size: 2rem;
+  width: 25vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 21vw;
+  margin-left: 2vw;
+  margin-right: 2vw;
+}
+
+.book {
+  all: initial;
+  width: 21vw;
+  padding: 5px;
+  border-radius: 5px;
+  background-color: rgb(221, 218, 218);
+  color: grey;
+}
+
+.checkbox-wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.checkbox {
+  margin-left: 2rem;
+}
+
+.input-submit-button {
+  all: initial;
+  background-color: rgb(73, 73, 196);
+  color: white;
+  width: 10rem;
+  height: 5vh;
+  border-radius: 1rem;
+  text-align: center;
+  cursor: pointer;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
 }
 
 .footer {
@@ -51,4 +147,5 @@ body {
   color: white;
   background-color: black;
   height: 100%;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
 }
